# tft-ai-agent-mastra

./: biome.json  package.json
.github/chatmodes/: Teacher.chatmode.md
src/mastra/agents/: tft-agent.ts
src/mastra/tools/: beep-tool.ts  key-mapper-tool.ts
src/services/python/: pyproject.toml  scripts.ps1
src/services/python/apps/: stt_api.py
src/services/python/docker/: Dockerfile.cpu  Dockerfile.gpu  README.md  requirements.txt
src/services/python/modules/faster_whisper_stt/: dockerfile  transcriber.py
src/services/python/modules/faster_whisper_stt/examples/: 01_simple_transcribe.py  README.md
src/services/python/modules/faster_whisper_stt/tests/: MODEL_COMPARISON.md  README.md  __init__.py  accuracy_metrics.py  test_accuracy.py  test_data_mapper.py  test_model_comparison.py  test_transcriber.py
src/services/python/modules/faster_whisper_stt_v2/: README.md  __init__.py  audio_io.py  config.py  hw_probe.py  registry.py  resources.py  service.py  transcription.py  types.py
src/services/python/modules/mic_recorder/: README.md  __init__.py  mic_recorder.py  test_mic_recorder.py
src/services/python/modules/mic_recorder/examples/: 01_quick_recording.py  02_indefinite_recording.py  03_trully_indefinite_recording.py
src/services/python/modules/mic_recorder/test_data/: test_indefinite.raw  test_indefinite_true_01.raw  test_indefinite_true_02.raw
src/utils/: play-beep.ts  screenshot.ts
