[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pyaudio>=0.2.11",
  "numpy>=1.24.0",
  "faster-whisper>=1.0.0",
  "torch>=2.0.0",
  "keyboard>=0.13.5"
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0"
]

[tool.pytest.ini_options]
testpaths = ["modules"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--verbose",
  "--color=yes",
  "--strict-markers"
]
